--- a/lesson15/hw15.1/style.css
+++ b/lesson15/hw15.1/style.css
@@ -1,29 +1,37 @@
 @media screen and (min-width:481px) {
     * {
-            margin: 0;
-            padding: 0;
-        }
-    
-        div {
-            display: flex;
-            flex-wrap: wrap;
-        }
-    
-        header {
-            width: 100%;
-            height: 20vh;
-            background-color: darkkhaki;
-        }
-    
-        section {
-            height: 80vh;
-            width: 70vw;
-            background-color: wheat;
-        }
-    
-        aside {
-            height: 80vh;
-            width: 30vw;
-            background-color: thistle;
-        }
+        margin: 0;
+        padding: 0;
+    }
+
+    .d1 {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+    }
+
+    .d2 {
+        display: flex;
+        width: 100%;
+        height: 100vh;
+    }
+
+    header {
+        width: 100%;
+        height: 20vh;
+        background-color: darkkhaki;
+    }
+
+    section {
+        height: 84vh;
+        width: 70vw;
+        background-color: wheat;
+    }
+
+    aside {
+        height: 84vh;
+        width: 30vw;
+        background-color: thistle;
+    }
 }
